# LoanManagementApp

./: .env  .gitignore  .replit  Pasted-Traceback-most-recent-call-last-File-home-runner-KandRFinancialServicesLoanManagementApp-py-1733966143784.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-KandRFinancialServicesLoanManagementApp-py-1733970279045.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-KandRFinancialServicesLoanManagementApp-py-1733970585438.txt  app.py  config.py  database_backup.sql  docker-compose.debug.yml  docker-compose.yml  loan-management-app.bundle  models.py  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt  schemas.py  theme.json  tsconfig.json  vite.config.ts
HTML/templates/: base.html
HTML/templates/admin/: analytics.html  loans.html  users.html
Python/: app.py  extensions.py  models.py
Python/modules/: __init__.py  analytics.py  borrowers.py
React&Typescript/: drizzle.config.ts  tsconfig.json
React&Typescript/server/: routes.ts  vite.ts
client/: index.html
client/src/: App.tsx
client/src/lib/: auth.ts
db/: index.ts  logging_config.py  schema.ts
modules/: analytics.py  borrowers.py
server/: index.ts  routes.ts
templates/: base.html  index.html
templates/admin/: analytics.html  dashboard.html  users.html
templates/analytics/: index.html  loan_performance.html
templates/auth/: register.html
templates/borrowers/: add.html  index.html
templates/customer/: application_status.html  document_upload.html  loan_application.html  portal.html  upload_application.html
(+21 files in other folders)
