[project]
name = "repl-nix-kandrfinancialservicesloanmanagementapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-migrate>=4.0.7",
    "flask-sqlalchemy>=3.1.1",
    "pillow>=11.0.0",
    "psycopg2-binary>=2.9.10",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "flask-mail>=0.10.0",
    "python-dateutil>=2.9.0.post0",
]
